<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/fondo"
    tools:context=".View.NuevoCliente">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="140dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="vertical"
            android:background="@drawable/gradiente">
        </LinearLayout>
        <android.support.v7.widget.CardView
            android:layout_width="350dp"
            android:layout_height="70dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="35dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="1">
                <TextView
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/cliente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nuevoC"
                    android:textSize="@dimen/titulo"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </RelativeLayout>

    <LinearLayout
        android:paddingHorizontal="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_person"/>
                <TextView
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:textStyle="bold"
                    android:textColor="#000"
                    android:textSize="@dimen/formularios"
                    android:text="@string/nombre"/>
            </LinearLayout>

            <EditText
                android:id="@+id/nombre_cliente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="6dp"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_place"/>
                <TextView
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:textStyle="bold"
                    android:textColor="#000"
                    android:textSize="@dimen/formularios"
                    android:text="@string/direccion"/>
            </LinearLayout>

            <EditText
                android:id="@+id/domicilio_cliente"
                style="@android:style/Theme.InputMethod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="6dp"
                android:selectAllOnFocus="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_phone"/>
                <TextView
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:textStyle="bold"
                    android:textColor="#000"
                    android:textSize="@dimen/formularios"
                    android:text="@string/telefono"/>
            </LinearLayout>

            <EditText
                android:id="@+id/telefono_cliente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="6dp"
                android:inputType="phone" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:paddingHorizontal="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">
        <Button
            android:textColor="#FFF"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/botones"
            android:layout_height="wrap_content"
            android:text="@string/guardar"
            android:lines="1"
            android:id="@+id/btn_guardar"/>
        <Button
            android:textColor="#FFF"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@drawable/cancel"
            android:layout_height="wrap_content"
            android:text="@string/cancelar"
            android:layout_gravity="center_horizontal"
            android:id="@+id/btn_cancelar"/>
    </LinearLayout>
</LinearLayout>